port toltec.web over

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,31 +9,23 @@ long_description = Dashpages is a multi-page dash app that comes with a set of p
 license = BSD 3-Clause
 url = http://to.be.set
 edit_on_github = False
-github_project = toltec-astro/pictor
+github_project = toltec-astro/dashpages
 python_requires = ">=3.6"
 
 [options]
 # install_requires should be formatted as a semicolon-separated list, e.g.:
 # install_requires = astropy; scipy; matplotlib
-install_requires = astropy
+install_requires = wheel; astropy; Flask; dash; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv
 zip_safe = False
 use_2to3 = False
-
-[options.entry_points]
-console_scripts =
-    
-    astropy-package-template-example = packagename.example_mod:main
-    
 
 [options.package_data]
 * = *.c
 dashpages = data/*
 dashpages.tests = coveragerc
 
-[build_sphinx]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+[options.extras_require]
+docs = sphinx-astropy
 
 [build_docs]
 source-dir = docs
