--- a/setup.cfg
+++ b/setup.cfg
@@ -1,28 +1,28 @@
 [metadata]
-name = dashpages
+name = dasha
 # version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
 version = 0.0.1
 author = Zhiyuan Ma
 author_email = zhiyuanma@umass.edu
 description = A multi-page dash app with a set of plug-and-play page templates
-long_description = Dashpages is a multi-page dash app that comes with a set of plug-and-play page templates
+long_description = DashA is a multi-page dash app that comes with a set of plug-and-play page templates
 license = BSD 3-Clause
 url = http://to.be.set
 edit_on_github = False
-github_project = toltec-astro/dashpages
+github_project = toltec-astro/dasha
 python_requires = ">=3.6"
 
 [options]
 # install_requires should be formatted as a semicolon-separated list, e.g.:
 # install_requires = astropy; scipy; matplotlib
-install_requires = wheel; astropy; Flask; dash; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv
+install_requires = wheel; astropy; pandas; Flask; dash; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv
 zip_safe = False
 use_2to3 = False
 
 [options.package_data]
 * = *.c
-dashpages = data/*
-dashpages.tests = coveragerc
+dasha = data/*
+dasha.tests = coveragerc
 
 [options.extras_require]
 docs = sphinx-astropy
