--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ python_requires = ">=3.6"
 [options]
 # install_requires should be formatted as a semicolon-separated list, e.g.:
 # install_requires = astropy; scipy; matplotlib
-install_requires = wheel; astropy; pandas; Flask; dash; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv
+install_requires = wheel; astropy; pandas; Flask; dash; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv; redis; mysqlclient; netCDF4
 zip_safe = False
 use_2to3 = False
 
