--- a/setup.cfg
+++ b/setup.cfg
@@ -15,9 +15,14 @@ python_requires = ">=3.6"
 [options]
 # install_requires should be formatted as a semicolon-separated list, e.g.:
 # install_requires = astropy; scipy; matplotlib
-install_requires = wheel; astropy; pandas; Flask; dash; dash_spa; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv; celery[redis]; celery-redbeat; celery_once; flask-celeryext; mysqlclient; netCDF4;
+install_requires = wheel; astropy; pandas; Flask; dash; dash_spa; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv; celery[redis]; celery-redbeat; celery_once; mysqlclient; netCDF4; anytree
 zip_safe = False
 use_2to3 = False
+
+[options.entry_points]
+console_scripts =
+    
+    dasha_exec_with_env = dasha.cli:load_env_helper
 
 [options.package_data]
 * = *.c
