--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ console_scripts =
     
     dasha_load_env = dasha.cli:load_env_helper
     dasha_demo = dasha.cli:run_demo
+    dasha = dasha.cli:run
 
 [options.package_data]
 * = *.c
