udpate astropy template

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,59 +1,96 @@
 [metadata]
 name = dasha
-# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
-version = 0.0.1
 author = Zhiyuan Ma
 author_email = zhiyuanma@umass.edu
-description = A multi-page dash app with a set of plug-and-play page templates
-long_description = DashA is a multi-page dash app that comes with a set of plug-and-play page templates
 license = BSD 3-Clause
+license_file = licenses/LICENSE.rst
 url = http://to.be.set
+description = A multi-page dash app framework.
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 edit_on_github = False
 github_project = toltec-astro/dasha
-python_requires = ">=3.6"
 
 [options]
-# install_requires should be formatted as a semicolon-separated list, e.g.:
-# install_requires = astropy; scipy; matplotlib
-install_requires = wheel; astropy; pandas; Flask; dash; dash_spa; dash_bootstrap_components; dash_daq; cached_property; flask_sqlalchemy; flask_caching; flask_migrate; connexion[swagger-ui]; python-dotenv; celery[redis]; celery-redbeat; celery_once; flask-celeryext; mysqlclient; netCDF4; anytree
 zip_safe = False
-use_2to3 = False
+packages = find:
+python_requires = >=3.6
+setup_requires = setuptools_scm
+install_requires =
+    astropy
+    pandas
+    cached_property
+    anytree
+    python-dotenv
+    flask
+    dash
+    dash_bootstrap_components
+    dash_daq
+    flask_sqlalchemy
+    flask_caching
+    flask_migrate
+    celery[redis]
+    celery-redbeat
+    celery_once
+    flask-celeryext
 
 [options.entry_points]
 console_scripts =
-    
     dasha_load_env = dasha.cli:load_env_helper
     dasha_demo = dasha.cli:run_demo
     dasha = dasha.cli:run
 
-[options.package_data]
-* = *.c
-dasha = data/*
-dasha.tests = coveragerc
-
 [options.extras_require]
-docs = sphinx-astropy
+test =
+    pytest-astropy
+    tox
+docs =
+    sphinx-astropy
+    mkdocs
+mysql =
+    mysqlclient
+all =
+    mysqlclient
 
-[build_docs]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
-
-[upload_docs]
-upload-dir = docs/_build/html
-show-response = 1
+[options.package_data]
+dasha = data/*
 
 [tool:pytest]
-minversion = 3.0
-norecursedirs = build docs/_build
+testpaths = "dasha" "docs"
+astropy_header = true
 doctest_plus = enabled
-addopts = -p no:warnings
+text_file_format = rst
+addopts = --doctest-rst
 
-[ah_bootstrap]
-auto_use = True
+[coverage:run]
+omit =
+    dasha/_astropy_init*
+    dasha/conftest.py
+    dasha/*setup_package*
+    dasha/tests/*
+    dasha/*/tests/*
+    dasha/extern/*
+    dasha/version*
+    */dasha/_astropy_init*
+    */dasha/conftest.py
+    */dasha/*setup_package*
+    */dasha/tests/*
+    */dasha/*/tests/*
+    */dasha/extern/*
+    */dasha/version*
 
-[flake8]
-exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
-
-[pycodestyle]
-exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
+[coverage:report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+    # Don't complain about packages we have installed
+    except ImportError
+    # Don't complain if tests don't hit assertions
+    raise AssertionError
+    raise NotImplementedError
+    # Don't complain about script hooks
+    def main\(.*\):
+    # Ignore branches that don't pertain to this version of Python
+    pragma: py{ignore_python_version}
+    # Don't complain about IPython completion helper
+    def _ipython_key_completions_
