--- a/tox.ini
+++ b/tox.ini
@@ -54,6 +54,8 @@ deps =
     devdeps: git+https://github.com/numpy/numpy.git#egg=numpy
     devdeps: git+https://github.com/astropy/astropy.git#egg=astropy
 
+    {distshare}/tollan-*.gz
+
 # The following indicates which extras_require from setup.cfg will be installed
 extras =
     test
@@ -69,6 +71,7 @@ changedir = docs
 description = invoke sphinx-build to build the HTML docs
 extras = docs
 commands =
+    pwd
     pip freeze
     sphinx-build -W -b html . _build/html
 
@@ -80,7 +83,7 @@ changedir = {toxinidir}
 commands =
     mkdocs build --clean
     python -c 'print("###### Starting local server. Press Control+C to stop server ######")'
-    mkdocs serve -a localhost:8080
+    mkdocs serve -a localhost:8888
 
 [testenv:docs-deploy]
 depends = {[testenv:docs]depends}
