--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,8 @@ install_requires =
     celery-redbeat
     celery_once
     flask-celeryext
+    flower
+    rejson
 
 [options.entry_points]
 console_scripts =
