--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ __pycache__
 pip-wheel-metadata/
 site/
 web.old/
+*.pid
 
 # Ignore .c files by default to avoid including generated code. If you want to
 # add a non-generated .c extension, use `git add -f filename.c`.
