--- a/dasha/web/deploy/500-gunicorn.conf
+++ b/dasha/web/deploy/500-gunicorn.conf
@@ -10,11 +10,12 @@
         # ProxyPassReverse / unix:///run/gunicorn_tolteca0.sock|http://127.0.1.1/
 
 	RewriteEngine On
-	RewriteRule      ^/(tolteca0|tolteca|dasha_lmt)(?:/(.*))?$ unix:///run/gunicorn_$1.sock|http://127.0.1.1/$1/$2  [P,L,NE]
+	RewriteRule      ^/(tolteca0|tolteca1|tolteca|dasha_lmt)(?:/(.*))?$ unix:///run/gunicorn_$1.sock|http://127.0.1.1/$1/$2  [P,L,NE]
 	RewriteRule      ^/(flower-tolteca)(?:/(.*))?$ http://127.0.0.1:5555/$2  [P,L,NE]
-        ProxyPassReverse /tolteca0/ unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
+        ProxyPassReverse /tolteca0/ unix:///run/gunicorn_tolteca0.sock|http://127.0.1.1/
+        ProxyPassReverse /tolteca1/ unix:///run/gunicorn_tolteca1.sock|http://127.0.1.1/
         ProxyPassReverse /tolteca/ unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
-        ProxyPassReverse /dasha_lmt/ unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
+        ProxyPassReverse /dasha_lmt/ unix:///run/gunicorn_dasha_lmt.sock|http://127.0.1.1/
         ProxyPassReverse /flower-tolteca/ http://127.0.1.1/
         # ProxyPass /1 unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
         # ProxyPassReverse /1 unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
