--- a/dasha/web/deploy/gunicorn@.service
+++ b/dasha/web/deploy/gunicorn@.service
@@ -11,13 +11,14 @@ Group=toltec
 # another option for an even more restricted service is
 # DynamicUser=yes
 # see http://0pointer.net/blog/dynamic-users-with-systemd.html
+Environment="VENV=/home/toltec/zma/venvs/toltec"
 EnvironmentFile=/home/toltec/zma/run/dasha/taco
 EnvironmentFile=/home/toltec/zma/run/dasha/%i
 Environment="DASH_REQUESTS_PATHNAME_PREFIX=/%i/"
 Environment="DASH_ROUTES_PATHNAME_PREFIX=/%i/"
 RuntimeDirectory=gunicorn
 WorkingDirectory=/home/toltec/zma/run
-ExecStart=/home/toltec/zma/venvs/toltec/bin/gunicorn --log-level DEBUG -w 4 dasha.web.wsgi
+ExecStart=/usr/bin/env "${VENV}/bin/gunicorn" --log-level DEBUG -w 4 dasha.web.wsgi
 ExecReload=/bin/kill -s HUP $MAINPID
 KillMode=mixed
 TimeoutStopSec=5
