--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ install_requires =
     cached_property
     anytree
     python-dotenv
+    psutil
     flask
     dash
     dash_bootstrap_components
