rewrite extension; add examples; add docs

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,14 +17,15 @@ packages = find:
 python_requires = >=3.6
 setup_requires = setuptools_scm
 install_requires =
-    astropy
+    astropy >= 4.0
     pandas
     cached_property
     anytree
     python-dotenv
     psutil
+    click
     flask
-    dash
+    dash >= 1.12.0
     dash_bootstrap_components
     dash_daq
     flask_sqlalchemy
@@ -41,7 +42,10 @@ install_requires =
 console_scripts =
     dasha_load_env = dasha.cli:load_env_helper
     dasha_demo = dasha.cli:run_demo
-    dasha = dasha.cli:run
+    dasha = dasha.cli:run_site
+
+flask.commands =
+    dasha = dasha.cli:run_flask
 
 [options.extras_require]
 test =
