--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,9 @@ install_requires =
     dash >= 1.12.0
     dash_bootstrap_components
     dash_daq
+    dash_defer_js_import
     flask_sqlalchemy
+    sqlakeyset
     flask_caching
     flask_migrate
     celery[redis]
