add dash_extensions download example

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ install_requires =
     flask
     dash >= 1.12.0
     dash_bootstrap_components
+    dash_extensions
     dash_daq
     dash_defer_js_import
     flask_sqlalchemy
@@ -54,6 +55,8 @@ test =
 docs =
     sphinx-astropy
     mkdocs
+examples =
+    astroquery
 mysql =
     mysqlclient
 all =
