update etc files

--- a/dasha/web/deploy/500-gunicorn.conf
+++ b/dasha/web/deploy/500-gunicorn.conf
@@ -1,29 +1,43 @@
 <VirtualHost *:80>
-        ServerAdmin zhiyuanma@umass.edu
+    ServerAdmin zhiyuanma@umass.edu
 
-        ErrorLog ${APACHE_LOG_DIR}/gunicorn-error.log
-        CustomLog ${APACHE_LOG_DIR}/gunicorn-access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/gunicorn-error.log
+    CustomLog ${APACHE_LOG_DIR}/gunicorn-access.log combined
 
-        ProxyPreserveHost On
+    ProxyPreserveHost On
 
-        # ProxyPass / unix:///run/gunicorn_tolteca0.sock|http://127.0.1.1/
-        # ProxyPassReverse / unix:///run/gunicorn_tolteca0.sock|http://127.0.1.1/
+    RewriteEngine On
+    RewriteRule      ^/(lmtmc|toltecmc|tolteca0|tolteca1|tolteca|dasha_lmt|cluster_dash|galaxy_sn_calculator|obs_planner|sensitivity_calculator|toltecdr)(?:/(.*))?$ unix:///run/gunicorn_$1.sock|http://127.0.1.1/$1/$2  [P,L,NE]
+    RewriteRule      ^/tolteca_tutorials(?:/(.*))?$ https://toltec-astro.github.io/tolteca_tutorials  [R]
+    RewriteRule      ^/tolteca_cli(?:/(.*))?$ https://github.com/toltec-astro/tolteca/blob/main/docs/tolteca/toltec_simu_tutorial.md  [R]
 
-	RewriteEngine On
-	RewriteRule      ^/(tolteca0|tolteca1|tolteca|dasha_lmt)(?:/(.*))?$ unix:///run/gunicorn_$1.sock|http://127.0.1.1/$1/$2  [P,L,NE]
-	RewriteRule      ^/(flower-tolteca)(?:/(.*))?$ http://127.0.0.1:5555/$2  [P,L,NE]
-        ProxyPassReverse /tolteca0/ unix:///run/gunicorn_tolteca0.sock|http://127.0.1.1/
-        ProxyPassReverse /tolteca1/ unix:///run/gunicorn_tolteca1.sock|http://127.0.1.1/
-        ProxyPassReverse /tolteca/ unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
-        ProxyPassReverse /dasha_lmt/ unix:///run/gunicorn_dasha_lmt.sock|http://127.0.1.1/
-        ProxyPassReverse /flower-tolteca/ http://127.0.1.1/
-        # ProxyPass /1 unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
-        # ProxyPassReverse /1 unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
+    RewriteRule      ^/index.html$ unix:///run/gunicorn_toltecdr.sock|http://127.0.1.1/toltecdr  [P,L,NE]
 
-        # ProxyPass /2 unix:///run/gunicorn_dasha_lmt.sock|http://127.0.1.1/
-        # ProxyPassReverse /2 unix:///run/gunicorn_dasha_lmt.sock|http://127.0.1.1/
+    RewriteRule      ^/(flower)(?:/(.*))?$ http://127.0.0.1:5555/$2  [P,L,NE]
+    RewriteRule      ^/glances$ /glances/  [R,NE]
+    RewriteRule      ^/(glances)(/.*)$ http://127.0.0.1:61208$2  [P,L,NE]
 
+    RewriteRule      ^/redis$ /redis/  [R,NE]
+    RewriteRule      ^/(redis)(/.*)$ http://127.0.0.1:63790$2  [P,L,NE]
+
+    ProxyPassReverse /lmtmc/ unix:///run/gunicorn_lmtmc.sock|http://127.0.1.1/
+    ProxyPassReverse /toltecmc/ unix:///run/gunicorn_toltecmc.sock|http://127.0.1.1/
+    ProxyPassReverse /tolteca0/ unix:///run/gunicorn_tolteca0.sock|http://127.0.1.1/
+    ProxyPassReverse /tolteca1/ unix:///run/gunicorn_tolteca1.sock|http://127.0.1.1/
+    ProxyPassReverse /tolteca/ unix:///run/gunicorn_tolteca.sock|http://127.0.1.1/
+    ProxyPassReverse /dasha_lmt/ unix:///run/gunicorn_dasha_lmt.sock|http://127.0.1.1/
+    ProxyPassReverse /cluster_dash/ unix:///run/gunicorn_cluster_dash.sock|http://127.0.1.1/
+    ProxyPassReverse /galaxy_sn_calculator/ unix:///run/gunicorn_galaxy_sn_calculator.sock|http://127.0.1.1/
+    ProxyPassReverse /obs_planner/ unix:///run/gunicorn_obs_planner.sock|http://127.0.1.1/
+    ProxyPassReverse /sensitivity_calculator/ unix:///run/gunicorn_sensitivity_calculator.sock|http://127.0.1.1/
+    ProxyPassReverse /toltecdr/ unix:///run/gunicorn_toltecdr.sock|http://127.0.1.1/
+    ProxyPassReverse /flower/ http://127.0.1.1/
+    ProxyPassReverse /glances/ http://127.0.0.1/
+    ProxyPassReverse /redis/ http://127.0.0.1/
+
+    RewriteRule      ^/dasha/(lmtmc)(?:/(.*))?$ unix:///run/gunicorn_$1.sock|http://127.0.1.1/dasha/$1/$2  [P,L,NE]
+    ProxyPassReverse /dasha/lmtmc/ unix:///run/gunicorn_lmtmc.sock|http://127.0.1.1/dasha/
 </VirtualHost>
 
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+# vim: syntax=apache ts=4 sw=4 sts=4 sr
