--- a/dasha/web/deploy/celerybeat@.service
+++ b/dasha/web/deploy/celerybeat@.service
@@ -11,20 +11,16 @@ Group=toltec
 # DynamicUser=yes
 # see http://0pointer.net/blog/dynamic-users-with-systemd.html
 
-Environment="VENV=/home/toltec/zma/venvs/toltec"
-Environment="CELERY_LOGLEVEL=info"
-EnvironmentFile=/home/toltec/zma/run/dasha/taco
-EnvironmentFile=/home/toltec/zma/run/dasha/taco
-EnvironmentFile=/home/toltec/zma/run/dasha/%i
+EnvironmentFile=/home/toltec/toltec_astro/run/dasha/taco
+EnvironmentFile=/home/toltec/toltec_astro/run/dasha/%i
 RuntimeDirectory=celery
 LogsDirectory=celery
-WorkingDirectory=/home/toltec/zma/run
-ExecStartPre=-/usr/bin/redis-cli flushall
-ExecStart=/usr/bin/env ${VENV}/bin/celery \
-	-A dasha.web.celery_app beat \
-	--pidfile=/var/run/celery/%i_beat.pid \
-	--logfile=/var/log/celery/%i_beat.log \
-	--loglevel=${CELERY_LOGLEVEL}
+# ExecStartPre=-/usr/bin/redis-cli flushall
+ExecStart=/usr/bin/env ${PYVENV}/bin/celery \
+    -A dasha.web.celery_app beat \
+    --pidfile=/var/run/celery/%i_celerybeat.pid \
+    --logfile=${DASHA_LOGS_DIR}/%i_celerybeat.log \
+    --loglevel=${LOGLEVEL_CELERYBEAT}
 
 [Install]
 WantedBy=multi-user.target
