--- a/dasha/web/deploy/celeryflower@.service
+++ b/dasha/web/deploy/celeryflower@.service
@@ -5,20 +5,18 @@ After=network.target
 [Service]
 Type=simple
 # the specific user that our service will run as
-User=www-data
-Group=www-data
+User=toltec
+Group=toltec
 # another option for an even more restricted service is
 # DynamicUser=yes
 # see http://0pointer.net/blog/dynamic-users-with-systemd.html
-
-EnvironmentFile=/home/toltec/zma/run/dasha/%i
-EnvironmentFile=/home/toltec/zma/run/dasha/taco
+EnvironmentFile=/home/toltec/toltec_astro/run/dasha/taco
+EnvironmentFile=/home/toltec/toltec_astro/run/dasha/%i
 RuntimeDirectory=celery
 LogsDirectory=celery
-WorkingDirectory=/home/toltec/zma/run
-ExecStart=/home/toltec/zma/venvs/toltec/bin/celery \
-	-A dasha.web.celery_app flower \
-	--url_prefix=flower-%i
+ExecStart=/usr/bin/env ${PYVENV}/bin/celery \
+    -A dasha.web.celery_app flower \
+    --url_prefix=flower
 
 [Install]
 WantedBy=multi-user.target
