--- a/setup.cfg
+++ b/setup.cfg
@@ -26,8 +26,8 @@ install_requires =
     cachetools
     click
     flask
-    dash >= 1.12.0
-    dash_bootstrap_components
+    dash < 2.0
+    dash_bootstrap_components < 1.0
     dash_extensions
     dash_daq
     dash_defer_js_import
