minor fixes for templates

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ setup_requires = setuptools_scm
 install_requires =
     astropy
     dash >= 2.0
-    dash_component_template
+    dash_component_template @ git+https://github.com/toltec-astro/dash_component_template.git@main
     flask
     click
     flask-dance
