--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,9 @@ install_requires =
     flask
     click
     flask-dance
+    flask_sqlalchemy
+    pandas
+    cachetools
 
 [options.entry_points]
 console_scripts =
